# TIN

./: .gitignore  README.md  pyproject.toml
tin/: __init__.py
tin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tin/cli/: __init__.py  demo.py
tin/core/: __init__.py  dtn.py  viz.py
tin/lunar/: __init__.py
tin/mars/: __init__.py
tin/tests/: __init__.py
