[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tin-network"
version = "0.4.0-dev"
description = "Tolerant Interplanetary Network — planet-agnostic DTN architecture"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "TIN Project Contributors"},
]
keywords = ["dtn", "lunar", "mars", "space", "network", "bundle-protocol"]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
viz = ["plotly>=5.0"]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.scripts]
tin-demo = "tin.cli.demo:main"

[project.urls]
Repository = "https://github.com/toxic2040/TIN-v0.3.1"

[tool.setuptools.packages.find]
include = ["tin*"]
