[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tin"
version = "0.4.0"
description = "Tolerant Interlunar Network — planet-agnostic cislunar DTN for Shackleton 100 % coverage, ≤5.6 min latency"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "TIN Project Contributors"}]
keywords = ["dtn", "lunar", "cislunar", "bundle-protocol", "space-networking", "artemis", "shackleton"]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "tqdm>=4.60",
]

[project.optional-dependencies]
viz = ["plotly>=5.15"]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.scripts]
tin-demo = "tin.cli.demo:main"

[project.urls]
Repository = "https://github.com/toxic2040/TIN"
Homepage = "https://github.com/toxic2040/TIN"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]

[tool.setuptools.packages.find]
include = ["tin*"]
